Add Fibonacci in Math

--- a/TestMyProjects/TestMyProjects.csproj
+++ b/TestMyProjects/TestMyProjects.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ToDos\ToDos.csproj" />
+    <ProjectReference Include="..\MyProjects\MyProjects.csproj" />
   </ItemGroup>
 
 </Project>
